Adding git hub link

--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello</h1>
+      <h1>Testing Testing</h1>
     </div>
 
+    <footer>
+      <a
+        href="https://github.com/mskellyy/world-clock"
+        class="gitLink"
+        target="_blank"
+        >Open-source Code</a
+      >
+      🎀 by Kelly
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
