Adding HTML structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,35 @@
   </head>
   <body>
     <div class="container">
-      <h1>Testing Testing</h1>
+      <h1>World Clock</h1>
+      <select name="" id="" class="">
+          <option value="">Select a City</option>
+          <option value="">Sydney</option>
+          <option value="">New York</option>
+          <option value="">Paris</option>
+      </select>
+    </div>
+
+    <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">August 15, 2023</div>
+        <div class="time">1:48:09 AM</div>
+        </div>
+
+
+    <div class="city">
+        <h2>New York</h2>
+        <div class="date">August 15, 2023</div>
+        <div class="time">1:48:09 AM</div>
+        </div>
+
+
+    <div class="city">
+        <h2>Paris</h2>
+        <div class="date">August 15, 2023</div>
+        <div class="time">1:48:09 AM</div>
+        </div>
+
     </div>
 
     <footer>
