--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <h1>World Clock</h1>
       <select name="" id="" class="">
           <option value="">Select a City</option>
-          <option value="">Sydney</option>
+          <option value="">Vancouver</option>
           <option value="">New York</option>
           <option value="">Paris</option>
       </select>
     </div>
 
     <div class="city">
-        <h2>Sydney</h2>
+        <h2>Vancouver</h2>
         <div class="date">August 15, 2023</div>
         <div class="time">1:48:09 AM</div>
         </div>
