--- a/index.html
+++ b/index.html
@@ -19,33 +19,29 @@
     <div class="container">
       <h1>World Clock</h1>
       <select name="" id="" class="">
-          <option value="">Select a City</option>
-          <option value="">Vancouver</option>
-          <option value="">New York</option>
-          <option value="">Paris</option>
+        <option value="">Select a City</option>
+        <option value="">Vancouver 🍁</option>
+        <option value="">New York 🚕</option>
+        <option value="">Paris 🥐</option>
       </select>
-    </div>
 
-    <div class="city">
-        <h2>Vancouver</h2>
+      <div class="city">
+        <h2>Vancouver 🍁</h2>
         <div class="date">August 15, 2023</div>
         <div class="time">1:48:09 AM</div>
-        </div>
+      </div>
 
-
-    <div class="city">
-        <h2>New York</h2>
+      <div class="city">
+        <h2>New York 🚕</h2>
         <div class="date">August 15, 2023</div>
         <div class="time">1:48:09 AM</div>
-        </div>
+      </div>
 
-
-    <div class="city">
-        <h2>Paris</h2>
+      <div class="city">
+        <h2>Paris 🥐</h2>
         <div class="date">August 15, 2023</div>
         <div class="time">1:48:09 AM</div>
-        </div>
-
+      </div>
     </div>
 
     <footer>
