Styling the container

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
-  <body>
+  <body class="body">
     <div class="container">
       <h1>World Clock</h1>
-      <select name="" id="" class="">
+      <select name="" id="" class="drop-down">
         <option value="">Select a City</option>
         <option value="">Vancouver 🍁</option>
         <option value="">New York 🚕</option>
