styling the time and date

--- a/index.html
+++ b/index.html
@@ -28,20 +28,25 @@
       <div class="city">
         <h2>Vancouver 🍁</h2>
         <div class="date">August 15, 2023</div>
-        <div class="time">1:48:09 AM</div>
+
+        <div class="time">1:48:09 <small>AM</small></div>
       </div>
 
+      <!--  
       <div class="city">
         <h2>New York 🚕</h2>
         <div class="date">August 15, 2023</div>
+
         <div class="time">1:48:09 AM</div>
       </div>
 
       <div class="city">
         <h2>Paris 🥐</h2>
         <div class="date">August 15, 2023</div>
+
         <div class="time">1:48:09 AM</div>
       </div>
+     BLOCKING OUT THE TWO CITIES FOR NOW -->
     </div>
 
     <footer>
