Adding cities back

--- a/index.html
+++ b/index.html
@@ -26,27 +26,28 @@
       </select>
 
       <div class="city">
-        <h2>Vancouver 🍁</h2>
-        <div class="date">August 15, 2023</div>
-
+        <div>
+          <h2>Vancouver 🍁</h2>
+          <div class="date">August 15, 2023</div>
+        </div>
         <div class="time">1:48:09 <small>AM</small></div>
       </div>
 
-      <!--  
       <div class="city">
-        <h2>New York 🚕</h2>
-        <div class="date">August 15, 2023</div>
-
-        <div class="time">1:48:09 AM</div>
+        <div>
+          <h2>New York 🚕</h2>
+          <div class="date">August 15, 2023</div>
+        </div>
+        <div class="time">1:48:09 <small>AM</small></div>
       </div>
 
       <div class="city">
-        <h2>Paris 🥐</h2>
-        <div class="date">August 15, 2023</div>
-
-        <div class="time">1:48:09 AM</div>
+        <div>
+          <h2>Paris 🥐</h2>
+          <div class="date">August 15, 2023</div>
+        </div>
+        <div class="time">1:48:09 <small>AM</small></div>
       </div>
-     BLOCKING OUT THE TWO CITIES FOR NOW -->
     </div>
 
     <footer>
