fixing box shadow and adding border to cities

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="city">
         <div>
-          <h2>Vancouver 🍁</h2>
+          <h2 class="city-name">Vancouver 🍁</h2>
           <div class="date">August 15, 2023</div>
         </div>
         <div class="time">1:48:09 <small>AM</small></div>
@@ -35,7 +35,7 @@
 
       <div class="city">
         <div>
-          <h2>New York 🚕</h2>
+          <h2 class="city-name">New York 🚕</h2>
           <div class="date">August 15, 2023</div>
         </div>
         <div class="time">1:48:09 <small>AM</small></div>
@@ -43,7 +43,7 @@
 
       <div class="city">
         <div>
-          <h2>Paris 🥐</h2>
+          <h2 class="city-name">Paris 🥐</h2>
           <div class="date">August 15, 2023</div>
         </div>
         <div class="time">1:48:09 <small>AM</small></div>
