--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         target="_blank"
         >Open-source Code</a
       >
-      🎀 by Kelly
+      on Git-Hub 🎀 by <strong>Kelly</strong>
     </footer>
     <script src="script.js"></script>
   </body>
