adding #ID's to html for js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <option value="">Paris 🥐</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="van">
         <div>
           <h2 class="city-name">Vancouver 🍁</h2>
           <div class="date">August 15, 2023</div>
@@ -33,7 +33,7 @@
         <div class="time">1:48:09 <small>AM</small></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="new-york">
         <div>
           <h2 class="city-name">New York 🚕</h2>
           <div class="date">August 15, 2023</div>
@@ -41,7 +41,7 @@
         <div class="time">1:48:09 <small>AM</small></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2 class="city-name">Paris 🥐</h2>
           <div class="date">August 15, 2023</div>
