--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="city" id="van">
         <div>
           <h2 class="city-name">Vancouver 🍁</h2>
-          <div class="date">August 15, 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:09 <small>AM</small></div>
+        <div class="time"></div>
       </div>
 
       <div class="city" id="new-york">
