adding my location js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <option value="Europe/London">London 🫖</option>
         <option value="Australia/Sydney">Sydney 🐨</option>
         <option value="America/Costa_Rica">Costa Rica 🏝️</option>
+        <option value="current">My Location 📍</option>
       </select>
 
       <div id="inject-new-city"></div>
