--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body class="body">
     <div class="container">
+      <img src="img/world.png" alt="world" class="world-img" />
       <h1 class="h1">World Clock</h1>
       <select name="" id="citySelect" class="drop-down">
         <option value="">Select a City</option>
@@ -26,6 +27,10 @@
         <option value="America/Costa_Rica">Costa Rica 🏝️</option>
         <option value="current">My Location 📍</option>
       </select>
+
+      <a href="index.html"
+        ><img src="img/pink.png" alt="refresh" class="refresh" />
+      </a>
 
       <div id="inject-new-city"></div>
 
@@ -61,7 +66,7 @@
         target="_blank"
         >Open-source Code</a
       >
-      on Git-Hub 🎀 by <strong>Kelly</strong>
+      on Git-Hub 🎀 made by <strong>Kelly</strong>
     </footer>
     <script src="script.js"></script>
   </body>
